--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,14 @@
             "runOptions": {
                 "runOn": "folderOpen"
             }
+        },
+        {
+            "type": "npm",
+            "script": "start",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
 }
